--- a/farmer-chart/values.yaml
+++ b/farmer-chart/values.yaml
@@ -1,9 +1,9 @@
 replicaCount: 1
 
 image:
-  repository: farmer-service
+  repository: ghcr.io/abu-oken/farmer-service
   tag: latest
-  pullPolicy: Never
+  pullPolicy: Always
 
 service:
   type: NodePort
